# RBAC-system-django-ninja-allauth-postgres

./: .env  implementation_plan.md  pyproject.toml
accounts/: __init__.py  admin.py  api.py  models.py  schemas.py
accounts/migrations/: 0001_initial.py
dashboard/: __init__.py  urls.py  views.py
dashboard/static/dashboard/css/: styles.css
dashboard/static/dashboard/js/: app.js  auth.js
dashboard/templates/dashboard/: index.html  login.html
rbac/: __init__.py  admin.py  api.py  api_test.py  apps.py  models.py  permissions.py  schemas.py
rbac/management/commands/: seed_data.py
rbac/migrations/: 0001_initial.py  0002_resource_has_delete_resource_has_read_and_more.py  0003_delete_article.py
rbac_project/: __init__.py  api.py  settings.py  urls.py  wsgi.py
