[project]
name = "rbac-project"
version = "0.1.0"
description = "Role-Based Access Control System with Django Ninja"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1",
    "django-ninja>=1.4",
    "django-allauth>=65.0",
    "djangorestframework-simplejwt>=5.4",
    "psycopg[binary]>=3.2",
    "django-cors-headers>=4.6",
    "python-decouple>=3.8",
]
